<resources>
    <string name="app_name" translatable="false">Autu Mandu</string>
    <string name="app_description">Enter the costs of your car and receive nice reports and statistics.</string>
    <string name="about_author" translatable="false">© Jan Kühle 2012, Juanro49 2023</string>
    <string name="about_thanks">Thanks to:</string>
    <string name="about_version">Version: %s</string>
    <string name="about_git" translatable="false">https://github.com/juanro49/autu-mandu</string>
    <string name="about_licenses">Licenses</string>
    <string name="drawer_reports">Reports</string>
    <string name="drawer_calculator">Calculator</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="drawer_reminders">Reminders</string>
    <string name="menu_synchronize">Synchronize</string>
    <string name="menu_save">Done</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_remove_account">Remove account</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_split">Split</string>
    <string name="menu_mount_umount">Mount/Umount</string>
    <string name="menu_add_car">Add car</string>
    <string name="menu_add_fuel_type">Add fuel type</string>
    <string name="menu_add_station">Add station</string>
    <string name="menu_add_reminder">Add reminder</string>
    <string name="menu_show_trend">Show trend</string>
    <string name="menu_show_overall_trend">Show overall trend</string>
    <string name="fab_add_refueling">Refueling</string>
    <string name="fab_add_trip">Trip</string>
    <string name="fab_add_other_expenditure">Other expenditure</string>
    <string name="fab_add_other_income">Other income</string>
    <string name="fab_add_tires">New Tires</string>
    <string name="fab_expand">Expand add options</string>
    <string name="fab_collapse">Collapse add options</string>
    <string name="fab_close_overlay">Close options</string>
    <string name="section_suspend">Suspend</string>
    <string name="section_advanced">Advanced options</string>
    <string name="hint_mileage_optional">Total distance (optional)</string>
    <string name="hint_volume">Volume</string>
    <string name="hint_price">Price</string>
    <string name="hint_price_total">Total price</string>
    <string name="hint_price_per_unit">Price per unit</string>
    <string name="hint_note_optional">Note (optional)</string>
    <string name="hint_title">Title</string>
    <string name="hint_name">Name</string>
    <string name="hint_date">Date</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_trip_start_time">Start time</string>
    <string name="hint_time">Time</string>
    <string name="hint_end_date">End date</string>
    <string name="hint_suspend_date">Suspend date</string>
    <string name="hint_category">Category</string>
    <string name="hint_url">URL</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="hint_initial_mileage">Initial mileage</string>
    <string name="hint_num_tires">Tires number</string>
    <string name="hint_manufacturer">Manufacturer</string>
    <string name="hint_model">Model</string>
    <string name="hint_buying_price">Buying Price</string>
    <string name="hint_trash_date">Trash Date</string>
    <string name="hint_reminder_after_distance">After distance</string>
    <string name="hint_reminder_after_time">After time</string>
    <string name="hint_reminder_start_mileage">Start at mileage</string>
    <string name="hint_reminder_start_date">Start at date</string>
    <string name="hint_reminder_snoozed_until">Snoozed until</string>
    <string name="hint_mount_distance">Mount distance</string>
    <string name="hint_umount_distance">Umount distance</string>
    <string name="hint_mount_date">Mount date</string>
    <string name="hint_umount_date">Umount date</string>
    <string name="label_partial">Partial</string>
    <string name="label_color_in_reports">Color in reports</string>
    <string name="label_suspend">Suspend</string>
    <string name="label_set_end_date">Set end date</string>
    <string name="label_split_cost">Split cost as monthly expense</string>
    <string name="hint_buying_price_split_months">Amortization period (months)</string>
    <string name="hint_purchase_date">Purchase date</string>
    <string name="label_amortize_until_now">Amortize until today</string>
    <string name="label_set_trash_date">Set trash date</string>
    <string name="menu_show_investment">Show buying price</string>
    <string name="label_car">Car</string>
    <string name="label_trip_refueling">Linked refueling</string>
    <string name="label_recurrence">Recurrence</string>
    <string name="label_reminder_type">Type</string>
    <string name="label_reminder_dismissed">Notification dismissed</string>
    <string name="label_trust_certificate">Trust this certificate</string>
    <string name="label_mount_tire">Mount</string>
    <string name="label_umount_tire">Umount</string>
    <string name="label_tank">Tank</string>
    <string name="label_trip_is_partial">Partial trip (only start data)</string>
    <string name="trip_partial_badge">Partial</string>
    <string name="hint_start_level">Start level (%)</string>
    <string name="hint_end_level">End level (%)</string>
    <string name="precision_warning">Note: Entering the volume directly from the pump/charger is more accurate than using percentages.</string>
    <string name="learn_capacity_title">New Tank Capacity</string>
    <string name="learn_capacity_message">Based on your input, the calculated capacity for this tank is %.2f %s. Do you want to save it?</string>
    <string name="label_is_manually_set">Capacity set manually</string>
    <string name="title_tanks">Tanks</string>
    <string name="menu_add_tank">Add tank</string>
    <string name="hint_tank_capacity">Capacity</string>
    <string name="description_suspend">You can suspend a car, when you don\'t use it anymore. This will cancel all repeating costs to the suspended date. Also the reports by default zoom to active cars only.</string>
    <string name="description_category">Refuelings are grouped by this category for different reports. Examples: Petrol, Diesel, Gas.</string>
    <string name="description_reminder_status_due">Due</string>
    <string name="description_reminder_status_due_snoozed">Due, snoozed until %s</string>
    <string name="description_reminder_status_due_dismissed">Due, notification dismissed</string>
    <string name="description_reminder_status_distance_and_time">Due in %1$s or %2$s</string>
    <string name="description_reminder_status_distance">Due in %s</string>
    <string name="description_reminder_status_time">Due in %s</string>
    <string name="description_webdav_url">Please enter the URL to a special folder for Autu Mandu on your WebDAV server. Autu Mandu will store its data inside this folder, it won\'t touch anything outside of it.</string>
    <string name="description_webdav_trust_certificate">The website uses a certificate, which is not trusted by Android.</string>
    <string name="validate_error_greater_zero">Has to be greater 0</string>
    <string name="validate_error_greater_equal_zero">Has to be greater or equal 0</string>
    <string name="validate_error_not_empty">Must not be empty</string>
    <string name="import_">Import</string>
    <string name="import_select_file">Select CSV File</string>
    <string name="import_no_file_selected">No file selected</string>
    <string name="import_format">Import Format</string>
    <string name="import_preview_title">Preview (first 3 rows)</string>
    <string name="pref_title_header_about">About Autu Mandu</string>
    <string name="pref_title_header_general">General settings</string>
    <string name="pref_title_header_cars">Cars</string>
    <string name="pref_title_header_fuel_types">Fuel Types</string>
    <string name="pref_title_header_stations">Stations</string>
    <string name="pref_title_header_reminders">Reminders</string>
    <string name="pref_title_header_report_order">Report order</string>
    <string name="pref_title_header_backup">Backup &amp; Export</string>
    <string name="pref_title_category_synchronization">Backup sync</string>
    <string name="pref_title_category_behavior">Behavior</string>
    <string name="pref_title_category_units">Units</string>
    <string name="pref_title_category_backup">Backup &amp; Restore</string>
    <string name="pref_title_category_export">Export &amp; Import</string>
    <string name="pref_title_behavior_default_car">Default car</string>
    <string name="pref_title_behavior_show_car_menu">Show car menu</string>
    <string name="pref_title_behavior_distance_entry_mode">Distance Entry Mode</string>
    <string name="pref_title_behavior_price_entry_mode">Price Entry Mode</string>
    <string name="pref_title_behavior_auto_guess_missing_data">Balance missing refuelings (Beta)</string>
    <string name="pref_title_behavior_reminder_snooze_duration">Reminder snooze duration</string>
    <string name="pref_title_behavior_auto_backup">Enable automatic backups</string>
    <string name="pref_title_behavior_keep_backups">Count of backups kept</string>
    <string name="pref_title_unit_currency">Currency</string>
    <string name="pref_title_unit_volume">Global Volume</string>
    <string name="pref_title_unit_distance">Distance</string>
    <string name="pref_title_unit_fuel_consumption">Fuel Consumption</string>
    <string name="pref_title_sync_setup">Set up backup sync</string>
    <string name="pref_title_backup">Backup</string>
    <string name="pref_title_backup_location">Backup target</string>
    <string name="pref_title_restore_backup_location">Restore target</string>
    <string name="pref_title_restore">Restore</string>
    <string name="pref_title_exportcsv">Export CSV</string>
    <string name="pref_title_importcsv">Import CSV</string>
    <string name="pref_summary_behavior_show_car_menu">Show a car selection menu, when adding a refueling and you have more than one car.</string>
    <string name="pref_summary_behavior_auto_guess_missing_data">Try to recognize missing refuelings. This will balance the significantly lower fuel consumptions, that occure when you forget to insert a refueling.</string>
    <string name="pref_summary_backup">Backup the current data to local storage.</string>
    <string name="pref_summary_backup_location">A path where backups are stored. If empty, a separate folder inside your internal storage or SD will be used.</string>
    <string name="pref_summary_restore_backup_location">Restore default path where backups are stored.</string>
    <string name="pref_summary_restore">Restore data from a file in your storage.</string>
    <string name="pref_summary_export_csv">Export data as CSV so you can use it in other programs like Microsoft Excel or LibreOffice Calc.</string>
    <string name="pref_summary_import_csv">Import data from CSV files. The files must look like the ones, that are generated during CSV export.</string>
    <string name="pref_summary_behavior_auto_backup">Do a backup when opening the main screen, maximum once daily.</string>
    <string name="pref_summary_behavior_keep_backups">Keep at maximum a defined number of backup when doing automatic backups.</string>
    <string name="quit_snooze_desc">Quit snooze</string>
    <string name="pref_title_import_carbudget">Import from CarBudget (SailfishOS)</string>
    <string name="pref_summary_import_carbudget">Import data from a CarBudget (.cbg) database file.</string>
</resources>